--- a/lab21/index.html
+++ b/lab21/index.html
@@ -16,28 +16,20 @@
 	<div id="content">
 		<div class="text">
 			<h1 align="center">LAB SUMMARY</h1>
-				<p></p>
+				<p>This lab was supposed to be experimenting GitHub and getting used to using it. However, we are already use GitHub as a server, therefore we already completed this lab. We have also completed Task X by default because our team had already created a team repository for the term project. We didn't have to do much, or anything, at all, but we did learn a few new things from the lecture this assignment was based on.</p>
 		</div>
 		<div class="text">
 			<h1 align="center">CHALLENGES</h1>
-				<p></p>
+				<p>There were no challenges with this lab.</p>
+				<img src="./img/github.gif">
 		</div>
 		<div class="text">
 			<h1 align="center">RESULTS</h1>
-				<p></p>
+				<p>The result is this website!</p>
+				<img src="./img/github.gif">
 		</div>
 	</div>
-<hr>
-	<div id="content">
-		<div class="javascript">
-			<h1>Javascript Output</h1>
-
-				<div id="output">
-				</div>
-				
-		</div>
-
-	</div>	
+<hr>	
 
 	<div class="links">
 		<a class="home" href="../index.html">Home</a> | <a href="./js/lab.js">Javascript File</a>
